--- a/Spanish_Verbs/Spanish_Verbs.vcxproj
+++ b/Spanish_Verbs/Spanish_Verbs.vcxproj
@@ -127,13 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Present_Continuous.cpp" />
+    <ClCompile Include="Present_Tense.cpp" />
     <ClCompile Include="Spanish_Verbs.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Spanish_Verbs.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Spanish_Verbs.rc" />
+    <ClInclude Include="Present_Continous.hpp" />
+    <ClInclude Include="Present_Tense.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
