--- a/Spanish_Verbs/Spanish_Verbs.vcxproj.filters
+++ b/Spanish_Verbs/Spanish_Verbs.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Verbs_Infinitive.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Future_Tense_Simple.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Present_Tense.hpp">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Pronouns.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Future_Tense_Simple.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
