--- a/Spanish_Verbs/Spanish_Verbs.vcxproj
+++ b/Spanish_Verbs/Spanish_Verbs.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Present_Continuous.cpp" />
     <ClCompile Include="Present_Tense.cpp" />
     <ClCompile Include="Spanish_Verbs.cpp" />
+    <ClCompile Include="Subjunctive_Present.cpp" />
     <ClCompile Include="Verbs_Infinitive.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +139,7 @@
     <ClInclude Include="Present_Continous.hpp" />
     <ClInclude Include="Present_Tense.hpp" />
     <ClInclude Include="Pronouns.hpp" />
+    <ClInclude Include="Subjunctive_Present.hpp" />
     <ClInclude Include="Verbs_Infinitive.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
