--- a/Spanish_Verbs/Spanish_Verbs.vcxproj
+++ b/Spanish_Verbs/Spanish_Verbs.vcxproj
@@ -142,6 +142,9 @@
     <ClInclude Include="Subjunctive_Present.hpp" />
     <ClInclude Include="Verbs_Infinitive.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
