--- a/Spanish_Verbs/Spanish_Verbs.vcxproj
+++ b/Spanish_Verbs/Spanish_Verbs.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Future_Tense_Simple.cpp" />
     <ClCompile Include="Imperfect_Tense.cpp" />
+    <ClCompile Include="Indefinite_Tense.cpp" />
     <ClCompile Include="Present_Continuous.cpp" />
     <ClCompile Include="Present_Tense.cpp" />
     <ClCompile Include="Spanish_Verbs.cpp" />
@@ -138,6 +139,7 @@
   <ItemGroup>
     <ClInclude Include="Future_Tense_Simple.hpp" />
     <ClInclude Include="Imperfect_Tense.hpp" />
+    <ClInclude Include="Indefinite_Tense.hpp" />
     <ClInclude Include="Present_Continous.hpp" />
     <ClInclude Include="Present_Tense.hpp" />
     <ClInclude Include="Pronouns.hpp" />
