--- a/Spanish_Verbs/Spanish_Verbs.vcxproj.filters
+++ b/Spanish_Verbs/Spanish_Verbs.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="Indefinite_Tense.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Numbers.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
