--- a/Spanish_Verbs/Spanish_Verbs.vcxproj
+++ b/Spanish_Verbs/Spanish_Verbs.vcxproj
@@ -70,6 +70,14 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>$(VC_IncludePath)/inc;$(WindowsSDK_IncludePath);$(VC_SourcePath)/inc</IncludePath>
+    <SourcePath>$(VC_SourcePath);</SourcePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>$(VC_IncludePath)/inc;$(WindowsSDK_IncludePath);$(VC_SourcePath)/inc</IncludePath>
+    <SourcePath>$(VC_SourcePath);</SourcePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -127,25 +135,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Future_Tense_Simple.cpp" />
-    <ClCompile Include="Imperfect_Tense.cpp" />
-    <ClCompile Include="Indefinite_Tense.cpp" />
-    <ClCompile Include="Present_Continuous.cpp" />
-    <ClCompile Include="Present_Tense.cpp" />
-    <ClCompile Include="Spanish_Verbs.cpp" />
-    <ClCompile Include="Subjunctive_Present.cpp" />
-    <ClCompile Include="Verbs_Infinitive.cpp" />
+    <ClCompile Include="src\Future_Tense_Simple.cpp" />
+    <ClCompile Include="src\Imperfect_Tense.cpp" />
+    <ClCompile Include="src\Indefinite_Tense.cpp" />
+    <ClCompile Include="src\Present_Continuous.cpp" />
+    <ClCompile Include="src\Present_Tense.cpp" />
+    <ClCompile Include="src\Spanish_Verbs.cpp" />
+    <ClCompile Include="src\Subjunctive_Present.cpp" />
+    <ClCompile Include="src\Verbs_Infinitive.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Future_Tense_Simple.hpp" />
-    <ClInclude Include="Imperfect_Tense.hpp" />
-    <ClInclude Include="Indefinite_Tense.hpp" />
-    <ClInclude Include="Numbers.hpp" />
-    <ClInclude Include="Present_Continous.hpp" />
-    <ClInclude Include="Present_Tense.hpp" />
-    <ClInclude Include="Pronouns.hpp" />
-    <ClInclude Include="Subjunctive_Present.hpp" />
-    <ClInclude Include="Verbs_Infinitive.hpp" />
+    <ClInclude Include="inc\Future_Tense_Simple.hpp" />
+    <ClInclude Include="inc\Imperfect_Tense.hpp" />
+    <ClInclude Include="inc\Indefinite_Tense.hpp" />
+    <ClInclude Include="inc\Numbers.hpp" />
+    <ClInclude Include="inc\Present_Continous.hpp" />
+    <ClInclude Include="inc\Present_Tense.hpp" />
+    <ClInclude Include="inc\Pronouns.hpp" />
+    <ClInclude Include="inc\Subjunctive_Present.hpp" />
+    <ClInclude Include="inc\Verbs_Infinitive.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
