--- a/Spanish_Verbs/CMakeLists.txt
+++ b/Spanish_Verbs/CMakeLists.txt
@@ -1,12 +1,9 @@
-cmake_minimum_required(VERSION 3.1...3.27)
+cmake_minimum_required(VERSION 3.1.5)
 
 # set the project name and version
-project(Spanish_Verbs 
-VERSION 1.0
-)
+project(Spanish_Verbs)
 
-set (INC_FILES inc/*.hpp)
-
+include_directories(inc)
 # Add main.cpp file of project root directory as source file
 set (SOURCE_FILES src/Spanish_Verbs.cpp 
 src/Future_Tense_Simple.cpp  
@@ -18,6 +15,5 @@ src/Subjunctive_Present.cpp
 )
 
 # Add executable target with source files listed in SOURCE_FILES variable
-add_executable(Spanish_EXE ${INC_FILES} ${SOURCE_FILES})
+add_executable(Spanish_EXE  ${SOURCE_FILES})
 
-include_directories(inc/ )
