--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,5 +18,5 @@ jobs:
         uses: threeal/cmake-action@v1.3.0
 
       - name: Build Project
-        run: cmake --build build
+        run: cmake -S /Spanish_Verbs --build build
 
