renamed .yml and setup act-cli

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: Pipeline
 
 on:
   push:
@@ -11,6 +11,10 @@ jobs:
     name: Build Project
     runs-on: ubuntu-latest
     steps:
+      - name: Setup cmake
+        uses: jwlawson/actions-setup-cmake@v1.13
+        with:
+          cmake-version: '3.16.x'
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
