Added unit test framework

--- a/Spanish_Verbs/CMakeLists.txt
+++ b/Spanish_Verbs/CMakeLists.txt
@@ -1,7 +1,8 @@
-cmake_minimum_required(VERSION 3.1.5)
+cmake_minimum_required(VERSION 3.5)
 
 # set the project name and version
 project(Spanish_Verbs)
+
 
 include_directories(inc)
 # Add main.cpp file of project root directory as source file
@@ -18,3 +19,12 @@ src/Subjunctive_Present.cpp
 # Add executable target with source files listed in SOURCE_FILES variable
 add_executable(Spanish_EXE  ${SOURCE_FILES})
 
+if(BUILD_TEST)
+  message("Building unit tests: Yes")
+  find_package(Catch2 REQUIRED)
+
+  include(CTest)
+  add_subdirectory(tests)
+else()
+  message("Building unit tests: No (default)")
+endif()
