--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 # set the project name and version
-project(Spanish_Verbs)
+project(Spanish_Verbs_APP)
 
 
 include_directories(inc)
@@ -17,18 +17,19 @@ src/Subjunctive_Present.cpp
 )
 
 # Add executable target with source files listed in SOURCE_FILES variable
+enable_testing()
+#test
 add_executable(Spanish_EXE  ${SOURCE_FILES})
-
 if(BUILD_TEST)
   message("Building unit tests: Yes")
   include(FetchContent)
   FetchContent_Declare(
-  Catch2
-  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-  GIT_TAG v3.5.2 # or latest stable
-)
-FetchContent_MakeAvailable(Catch2)
-target_link_libraries(Spanish_EXE PRIVATE Catch2::Catch2WithMain)
+    Catch2
+    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+    GIT_TAG v3.5.2 # or latest stable
+  )
+  FetchContent_MakeAvailable(Catch2)
+  add_subdirectory(tst)
 else()
   message("Building unit tests: No (default)")
 endif()
