--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -1,8 +1,6 @@
 # CMakeLists.txt for tests
-enable_testing()
 
 add_executable(Test_Present_Tense Test_Present_Tense.cpp)
 target_link_libraries(Test_Present_Tense PRIVATE Catch2::Catch2WithMain)
 
-include(GoogleTest)
-gtest_discover_tests(Test_Present_Tense)
+add_test(NAME Test_Present_Tense COMMAND Test_Present_Tense)
