--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Configure Project
         uses: threeal/cmake-action@v1.3.0
         with:
-          source-dir: Spanish_Verbs
+          source-dir: Spanish_App
 
       - name: Build Project
         run: cmake
