--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -2,7 +2,7 @@
 include (CTest)
 
 include_directories(../inc/ ../src/)
-add_executable(Test_Present_Tense Test_Present_Tense.cpp ../src/Present_Tense.cpp ../src/Pronouns.cpp)
+add_executable(Test_Present_Tense Test_Present_Tense.cpp ../src/Present_Tense.cpp ../src/util/String_Helper.cpp)
 target_link_libraries(Test_Present_Tense PRIVATE Catch2::Catch2WithMain)
 
 add_test(NAME Test_Present_Tense COMMAND Test_Present_Tense)
